tests/java5/generics/decp/binary/Asp3.aj
aspect Asp3 {
    declare parents: B* implements I; // error
}
